# MobileMate

./: .buildconfig  meson.build  org.codingspiderfox.Mobilemate.json  org.gnome.Mobilemate.json
data/: meson.build  org.codingspiderfox.Mobilemate.appdata.xml.in  org.codingspiderfox.Mobilemate.gschema.xml  org.gnome.Mobilemate.appdata.xml.in  org.gnome.Mobilemate.desktop.in  org.gnome.Mobilemate.gschema.xml
po/: POTFILES  meson.build
src/: main.vala  meson.build  mobilemate.gresource.xml  window.ui  window.vala
